[project]
name = "bitcoin-cycle-model"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "marimo>=0.17.8",
    "matplotlib>=3.10.7",
    "numpy>=2.3.5",
    "pandas>=2.3.3",
    "plotly>=6.5.0",
    "requests>=2.32.5",
    "rich>=14.2.0",
    "ruff>=0.14.5",
    "tenacity>=9.1.2",
    "yfinance>=0.2.66",
]
